Fix infinite loop at "Close File". Add new menu item to save uncompressed RawFile image.

--- a/src/windows/VGMTrans.rc
+++ b/src/windows/VGMTrans.rc
@@ -135,6 +135,7 @@ IDR_RAWFILE MENU
 BEGIN
     POPUP ""
     BEGIN
+        MENUITEM "Save as original format",     ID_SAVERAWFILE
         MENUITEM "Close File",                  IDC_CLOSEFILE
     END
 END
