Add a lot of new challenges and several fixes for Rare SNES instruments.

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -184,6 +184,7 @@
   <ItemGroup>
     <ClCompile Include="BytePattern.cpp" />
     <ClCompile Include="datetime.cpp" />
+    <ClCompile Include="formats\RareSnesInstr.cpp" />
     <ClCompile Include="formats\SNESDSP.cpp" />
     <ClCompile Include="loaders\GSFLoader.cpp" />
     <ClCompile Include="LogItem.cpp" />
@@ -318,6 +319,7 @@
   <ItemGroup>
     <ClInclude Include="BytePattern.h" />
     <ClInclude Include="datetime.h" />
+    <ClInclude Include="formats\RareSnesInstr.h" />
     <ClInclude Include="formats\SNESDSP.h" />
     <ClInclude Include="loaders\GSFLoader.h" />
     <ClInclude Include="LogItem.h" />
