--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -543,6 +543,9 @@
     <ClCompile Include="formats\SNESDSP.cpp">
       <Filter>Source Files\formats</Filter>
     </ClCompile>
+    <ClCompile Include="formats\RareSnesInstr.cpp">
+      <Filter>Source Files\formats\raresnes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="windows\aboutdlg.h">
@@ -991,6 +994,9 @@
     </ClInclude>
     <ClInclude Include="formats\SNESDSP.h">
       <Filter>Header Files\formats</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\RareSnesInstr.h">
+      <Filter>Header Files\formats\raresnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
